fix: various layout fixes and spacing fixes for mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -179,18 +179,18 @@ body {
 	min-height: 100vh;
 	background-color: var(--background);
 	color: var(--foreground);
-	padding: 1rem 1rem 0;
+	padding: 0.75rem 0 0;
 }
 
 @media (min-width: 768px) {
 	body {
-		padding: 1rem 2rem 0;
+		padding: 1rem 1rem 0;
 	}
 }
 
 @media (min-width: 1024px) {
 	body {
-		padding: 1rem 5rem 0;
+		padding: 1rem 1.5rem 0;
 	}
 }
 
